# Codex-Manager

./: .gitignore  LICENSE  README.en.md  README.md
crates/gpttools-service/: Cargo.toml
crates/gpttools-service/src/: auth_callback.rs  gateway.rs  lib.rs  rpc_dispatch.rs  usage_refresh.rs
crates/gpttools-service/src/account/: account_list.rs
crates/gpttools-service/src/apikey/: apikey_list.rs
crates/gpttools-service/src/auth/: auth_callback.rs  auth_callback_tests.rs  auth_tokens.rs
crates/gpttools-service/src/gateway/: cooldown.rs  http_bridge.rs  local_count_tokens.rs  local_validation.rs  local_validation_auth.rs  local_validation_io.rs  local_validation_request.rs  metrics.rs  mod.rs  model_picker.rs  model_picker_request.rs  openai_fallback.rs  protocol_adapter.rs  request_entry.rs  request_gate.rs  request_helpers.rs  request_log.rs  route_hint.rs  route_quality.rs  runtime_config.rs  trace_log.rs  upstream_config.rs  upstream_execution_context.rs  upstream_proxy.rs
crates/gpttools-service/src/gateway/availability_tests/: mod.rs  (+4 more)
crates/gpttools-service/src/http/: backend_router.rs  backend_runtime.rs  callback_endpoint.rs  gateway_endpoint.rs  mod.rs  proxy_runtime.rs  rpc_endpoint.rs  server.rs
crates/gpttools-service/src/requestlog/: requestlog_list.rs
crates/gpttools-service/src/rpc_dispatch/: account.rs  apikey.rs  requestlog.rs  usage.rs
crates/gpttools-service/src/usage/: usage_account_meta.rs  usage_list.rs  usage_refresh.rs  usage_refresh_errors.rs  usage_refresh_status_tests.rs
crates/gpttools-service/tests/: gateway_logs.rs  rpc.rs
(+366 files in other folders)
